# secsgem-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: critic.py  hypothesis_plan.py
datasets/ground_truth/: SC-CENTER-01.json  SC-CENTER-02.json  SC-CENTER-03.json  SC-EDGE-RING-01.json  SC-EDGE-RING-02.json  SC-EDGE-RING-03.json  SC-SCRATCH-01.json  SC-SCRATCH-02.json  SC-SCRATCH-03.json  SC-UNMATCHED-01.json  SC-UNMATCHED-02.json
eval/: ablation.py  metrics.py
preprocess/: label_ontology.py  mw38_loader.py  preprocessing.ipynb  render.py  wm811k_loader.py
server/: _seed.py  db.py  main.py  schemas.py
server/tools/: alarm.py  change_point.py  commonality.py  lot.py  maintenance.py  normal_ratio.py  telemetry.py  timeline.py  wafer.py
simulator/: fab_model.py  fab_model.yaml  generate.py  mapping_table.md  mapping_table.yaml  render_mapping_md.py
simulator/scenarios/: schema.py
tests/: conftest.py  test_alarm_lot_link.py  test_class_scope.py  test_e2e_samples.py  test_fab_model_consistency.py  test_label_ontology.py  test_mapping_table_consistency.py  test_no_ground_truth_leak.py  test_no_interpretation.py  test_normal_ratio_no_double_count.py  test_scenario_no_clue_collision.py  test_scenario_non_circular.py  test_scenario_shapes.py  test_telemetry_downsample.py  test_wafer_no_label.py
