[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secsgem-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "secsgem>=0.3.0",
    "pydantic>=2.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",       # 웨이퍼맵 PNG 렌더링
    "ruptures>=1.1",      # change point detection (detect_change_points)
    "pyyaml>=6.0",        # fab_model.yaml·mapping_table.yaml 로더 (generate, fab_model)
]

# flat-layout에 top-level 패키지가 여러 개 → 명시 필수 (auto-discovery 에러 방지)
[tool.setuptools]
packages = ["server", "server.tools", "preprocess",
            "simulator", "simulator.scenarios", "agent", "eval"]

[tool.pytest.ini_options]
addopts = "-q"
markers = ["data: 데이터셋 빌드(fab.db)가 필요한 테스트 — CI에서 제외"]

# 재현성 정책
[tool.secsgem-mcp]
global_seed = 20260101
timeline_days = 90